# leonine

./: .travis.yml  README.md  TODO.md  leonine.cabal  stack.yaml
lib/Data/: Leonine.hs
lib/Data/Leonine/: Chunk.hs  Dense.hs  Sparse.hs  Utils.hs
test/: doctests.hs  properties.hs
